# playwright-simple

./: .coveragerc  .cursorrules  .flake8  .gitignore  .project-safety.json  CHANGELOG.md  CONTRIBUTING.md  CORE_VS_ODOO_MATRIX.md  DOCUMENTATION_INDEX.md  FORGEERP_EXTENSION_IMPLEMENTATION.md  HANDOFF_FLUXOS_RACCO.md  HANDOFF_NAVEGACAO.md  HANDOFF_NOTE.md  HANDOFF_SESSION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  LICENSE  MANIFEST.in  MIGRATION_REQUIREMENTS.md  QUICK_START.md  README.md  README_SAFETY.md  REFACTORING_ARCHITECTURE.md  REFACTORING_CHECKLIST.md  REFACTORING_PLAN.md  REFACTORING_STATUS.md  REFACTORING_SUMMARY.md  TECHNICAL_DEBT.md  USER_MANUAL.md  VIDEO_FEATURES_PLAN.md  VIDEO_PROCESSING_FLOW.md  check_yaml.py  debug_configuracao.py  debug_fluxo_02_categorias.py  pyproject.toml  pytest.ini  pyvenv.cfg  requirements-dev.txt  requirements.txt  (+22 more)
archive/: README.md
debug_checkpoints/: checkpoint_20251114_032331.json
debug_fluxo_02/: after_categorias_failure.json  before_categorias.json
debug_states/: error_20251114_030726.json  error_20251114_030948.json  error_20251114_031115.json  error_20251114_031341.json  error_20251114_031459.json  error_20251114_031609.json  error_20251114_031659.json  error_20251114_031746.json  error_20251114_031818.json  error_20251114_031926.json  error_20251114_033339.json  error_20251114_033757.json  error_20251114_034925.json  error_20251114_035337.json
docs/: ACTIONS_MAPPING.md  AI_CONTROL_INTERFACE.md  API.md  API_REFERENCE.md  AUTOMATION.md  AUTO_FIX_DIRECT_SUMMARY.md  AUTO_FIX_ROLLBACK.md  AUTO_FIX_WITH_AI.md  BETTER_APPROACH.md  CLI.md  CLI_COMMANDS.md  COMMAND_SERVER.md  COMMUNICATION_INTERFACE.md  COMMUNICATION_OPTIONS.md  CONFIGURATION.md  CORE_MINIMAL_ACTIONS.md  CORE_REFACTORING.md  CORE_SIMPLIFICATION_ANALYSIS.md  CORE_SIMPLIFICATION_PLAN.md  CRITICAL_AREAS.md  DEBUGGING.md  DEPRECATED_ACTIONS_REPORT.md  EXAMPLES.md  EXTENSIONS_ARCHITECTURE.md  HOT_RELOAD.md  HTML_ANALYSIS.md  HYBRID_WORKFLOW.md  IMPLEMENTATION_SUMMARY.md  IPC_TOOLS.md  MCP_BROWSER_TOOLS.md  PERFORMANCE.md  PLAYWRIGHT_ACCESS.md  PLAYWRIGHT_COMMANDS.md  PYTHON_HOT_RELOAD.md  QUICK_START.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_FINAL.md  REFACTORING_PLAN.md  REFACTORING_STATUS.md  (+4 more)
examples/: advanced_playwright.yaml  advanced_python.py  basic_python.py  basic_yaml.yaml  common_login.yaml  ecommerce_example.py  forgeerp_basic.py  forgeerp_workflows.py  forgeerp_yaml_example.yaml  odoo_basic.py  odoo_example.py  odoo_sale_order.yaml  test_auto_fix_demo.yaml  test_colaborador_portal_completo.yaml  test_colaborador_portal_core.yaml  test_colaborador_portal_core_simple.yaml  (+7 more)
(+463 files in other folders)
